--- a/springprojet/src/main/resources/templates/productAdd.html
+++ b/springprojet/src/main/resources/templates/productAdd.html
@@ -73,11 +73,11 @@
       <div class="col-sm-5">
         <p>Product Image</p>
         <div class="custom-file">
-          <input type="file"  class="custom-file-input" name="productImage" accept="image/jpeg, image/png"  id="productImage"/>
+          <input type="file"  class="custom-file-input" name="productImage"   id="productImage"/>
           <label class="custom-file-label" for="productImage">Choose file</label>
         </div>
         <div class="form-group">
-          <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/productImages/' + productDTO.imageName}}" style="margin-top: 20px" alt=" ">
+          <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/product/' + productDTO.imageName}}" style="margin-top: 20px" alt=" ">
         </div>
         <input type="hidden" name="imgName" th:value="${productDTO.imageName}">
         <button type="submit" class="btn btn-primary">Submit</button>
