--- a/springprojet/src/main/resources/templates/catjob.html
+++ b/springprojet/src/main/resources/templates/catjob.html
@@ -36,60 +36,36 @@
         </div>
     </div>
 </nav>
-<div class="jumbotron text-center">
-    <h1 class="display-4">Welcome back, Admin</h1>
-    <p>Easily manage your data from this admin <mark>CMS</mark></p>
-</div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-3 pt-3" >
-            <div class="card" style="background-color:white;">
-                <div class="card-body">
-                    <h4 class="card-title">Categories</h4>
-                    <p class="card-text">Manage the categories section here.</p>
-                    <a href="#" th:href="@{/admin/categories}" class="card-link btn btn-primary">Manage</a>
+<div class="container">
 
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-3 pt-3" >
-            <div class="card" style="background-color:white;">
-                <div class="card-body">
-                    <h4 class="card-title">Products</h4>
-                    <p class="card-text">Manage all the products here.</p>
-                    <a href="#" th:href="@{/admin/products}" class="card-link btn btn-primary">Manage</a>
+    <a th:href="@{/admin/categories job/add}" style="margin: 20px 0" class="btn btn-primary">Add Category job</a>
+    <table class="table">
+        <thead class="thead-light">
+        <tr>
+            <th scope="col">SN</th>
+            <th scope="col">Category Name</th>
+            <th scope="col">Delete</th>
+            <th scope="col">Update</th>
+        </tr>
+        </thead>
+        <tbody>
 
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-3 pt-3" >
-            <div class="card" style="background-color:white;">
-                <div class="card-body">
-                    <h4 class="card-title">Job</h4>
-                    <p class="card-text">Manage all the Job here.</p>
-                    <a href="#" th:href="@{/admin/job}" class="card-link btn btn-primary">Manage</a>
+        <tr th:each="categoryjob, iStat : ${categoryjob}">
+            <th scope="row" th:text="${iStat.index + 1}">1</th>
+            <td th:text="${categoryjob.name}">Larry</td>
 
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-3 pt-3" >
-            <div class="card" style="background-color:white;">
-                <div class="card-body">
-                    <h4 class="card-title">category -Job</h4>
-                    <p class="card-text">Manage all the Categories Job here.</p>
-                    <a href="#" th:href="@{/admin/categorical}" class="card-link btn btn-primary">Manage</a>
+            <td><a href="" th:href="@{/admin/categoriesjob/delete/{id}(id=${categoryjob.id})}" class="btn btn-danger">Delete</a></td>
+            <td><a href="" th:href="@{/admin/categoriesjob/update/{id}(id=${categoryjob.id})}" class="btn btn-warning">Update</a></td>
 
-                </div>
-            </div>
-        </div>
-
-    </div>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://cdn.misdeliver.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
