--- a/springprojet/src/main/resources/templates/shop.html
+++ b/springprojet/src/main/resources/templates/shop.html
@@ -31,6 +31,9 @@
           <a class="nav-link" th:href="@{/}" href="#">home</a>
         </li>
         <li class="nav-item active">
+          <a class="nav-link" th:href="@{/admin/job}" href="#">Job</a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
         </li>
         <li class="nav-item active">
