--- a/springprojet/src/main/resources/templates/shop.html
+++ b/springprojet/src/main/resources/templates/shop.html
@@ -31,7 +31,7 @@
           <a class="nav-link" th:href="@{/}" href="#">home</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" th:href="@{/admin/job}" href="#">Job</a>
+          <a class="nav-link" th:href="@{/admin/job2}" href="#">Job</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
