--- a/springprojet/src/main/resources/templates/apply-list.html
+++ b/springprojet/src/main/resources/templates/apply-list.html
@@ -7,15 +7,53 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+    <div class="container-fluid">
 
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggle-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto"></ul>
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" th:href="@{/admin}" href="#">admin-home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
+          </li>
+
+        </ul>
+
+      </div>
+    </div>
+  </nav>
   <title>Document</title>
 </head>
 <body>
-<table>
+<table class="table table-striped-columns">
+  <thead>
+  <tr>
+    <th scope="col">name</th>
+    <th scope="col">Last name</th>
+    <th scope="col">email</th>
+    <th scope="col">Cv</th>
+    <th scope="col"> Stat </th>
+    <th scope="col">Delete</th>
+    <th scope="col">Update</th>
+    <th scope="col">Repondre</th>
+  </tr>
+  </thead>
   <tr th:each="apply : ${applies}">
     <td th:text="${apply.name}"></td>
     <td th:text="${apply.lastname}"></td>
     <td th:text="${apply.email}"></td>
+    <td th:text="${apply.cv}"></td>
+    <td th:text="${apply.accepted}"></td>
+    <td><a href="" th:href="@{/admin/apply/delete/{id}(id=${apply.id})}" class="btn btn-danger">Delete</a></td>
+    <td><a href="" th:href="@{/admin/apply/update/{id}(id=${apply.id})}" class="btn btn-danger">Update</a></td>
+    <td><a href="" th:href="@{/sendEmail}" class="btn btn-danger">Repondre</a></td>
     <!-- Autres champs -->
   </tr>
 </table>
