--- a/springprojet/src/main/resources/templates/apply-list.html
+++ b/springprojet/src/main/resources/templates/apply-list.html
@@ -53,7 +53,7 @@
     <td th:text="${apply.accepted}"></td>
     <td><a href="" th:href="@{/admin/apply/delete/{id}(id=${apply.id})}" class="btn btn-danger">Delete</a></td>
     <td><a href="" th:href="@{/admin/apply/update/{id}(id=${apply.id})}" class="btn btn-danger">Update</a></td>
-    <td><a href="" th:href="@{/sendEmail}" class="btn btn-danger">Repondre</a></td>
+    <td><a href="" th:href="@{/sendEmail/{id}(id=${apply.id})}" class="btn btn-danger">Repondre</a></td>
     <!-- Autres champs -->
   </tr>
 </table>
