--- a/springprojet/src/main/resources/templates/apply.html
+++ b/springprojet/src/main/resources/templates/apply.html
@@ -1,52 +1,87 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Application Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>
+        /* Ajout de styles CSS personnalisés */
+        body {
+            background-color: #f4f4f4;
+            padding-top: 50px;
+        }
 
-    <title>Document</title>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-        <div class="container-fluid">
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 50%;
+            margin: 0 auto;
+        }
 
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggle-icon"></span>
-            </button>
+        input[type="text"], input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto"></ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" th:href="@{/admin}" href="#">admin-home</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
-                    </li>
-
-                </ul>
-
-            </div>
-        </div>
-    </nav>
+        button[type="submit"] {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-<!-- apply-form.html -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img th:src="@{/images/logo.png}"  src="../static/images/logo.png" width="auto" height="40" class="d-inline-block align-top" alt=""/>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-<form th:action="@{/apply/save}" th:object="${apply}" method="post">
-    <div class="form-group">
-    Name:<input type="text" th:field="*{name}" placeholder="Name"/><br><br>
-    Lastname:<input type="text" th:field="*{lastname}" placeholder="Email"/><br><br>
-    Email<input type="text" th:field="*{email}" placeholder="Email"/><br><br>
-    Accepted:     <input type="text" th:field="*{accepted}" placeholder="En attente"/><br><br>
-    CV:<input type="file" th:field="*{cv}" placeholder="Email"/><br><br>
-    <!-- Autres champs -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto"></ul>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/admin}" href="#">admin-home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
+                </li>
+
+            </ul>
+
+        </div>
     </div>
-    <button type="submit">Submit</button>
-</form>
-
-<!-- apply-list.html -->
-
+</nav>
+<div class="container">
+    <form th:action="@{/apply/save}" th:object="${apply}" method="post">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" th:field="*{name}" placeholder="Name">
+            <label for="lastname">Lastname:</label>
+            <input type="text" id="lastname" th:field="*{lastname}" placeholder="Lastname">
+            <label for="email">Email:</label>
+            <input type="text" id="email" th:field="*{email}" placeholder="Email">
+            <label for="accepted">Accepted:</label>
+            <input type="text" id="accepted" th:field="*{accepted}" placeholder="En attente">
+            <label for="cv">CV:</label>
+            <input type="file" id="cv" th:field="*{cv}" placeholder="CV">
+            <!-- Autres champs -->
+        </div>
+        <button type="submit">Submit</button>
+    </form>
+</div>
 </body>
+</html>
