--- a/springprojet/src/main/resources/templates/admin.html
+++ b/springprojet/src/main/resources/templates/admin.html
@@ -92,6 +92,16 @@
                 </div>
             </div>
         </div>
+        <div class="col-sm-3 pt-3" >
+            <div class="card" style="background-color:white;">
+                <div class="card-body">
+                    <h4 class="card-title"> Envouyer Messages fournisseur</h4>
+                    <p class="card-text">Envouyer Message Fournisseur</p>
+                    <a href="#" th:href="@{/messages}" class="card-link btn btn-primary">Manage</a>
+
+                </div>
+            </div>
+        </div>
 
     </div>
 </div>
